# ai-infra-investment-review

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.agents/skills/ai-infra-investment-review/: SKILL.md
config/: capex_transmission.yaml  data_sources.yaml  indicators.yaml  layers.yaml  metric_catalog.yaml  portfolio.yaml
references/: data_sources.md  framework.md  plan.md
scripts/: run_monthly_review.py
src/ai_infra_review/: __init__.py  capex_model.py  config.py  metrics.py  rebalance.py  report.py  scoring.py
src/ai_infra_review/data_sources/: __init__.py  company_ir.py  market.py  mock.py  sec.py
tests/: test_capex_model.py  test_data_sources.py  test_metric_quality_gates.py  test_rebalance.py  test_scoring.py
